# backend

./: .gitignore  Cargo.toml  README.md  shell.nix
migrations/2024-08-20-151140_add_users/: down.sql  up.sql
migrations/2024-08-21-134610_add_permission/: down.sql  up.sql
migrations/2024-08-21-210445_add_events/: down.sql  up.sql
migrations/2024-09-03-203318_add_user_new_field/: down.sql  up.sql
migrations/2024-09-06-093945_remove_active_passive_factor/: down.sql  up.sql
migrations/2024-09-06-095245_add_deadline_data_to_events/: down.sql  up.sql
migrations/2024-09-12-203231_add_user_action/: down.sql  up.sql
migrations/2024-09-16-112434_add_new_slots/: down.sql  up.sql
migrations/2024-09-16-124009_add_show_fetlife/: down.sql  up.sql
migrations/2024-09-17-092838_add_user_new_slot/: down.sql  up.sql
migrations/2024-09-27-194807_add_check_permission/: down.sql  up.sql
migrations/2024-10-11-233344_add_log_states/: down.sql  up.sql
migrations/2024-10-12-125715_split_event_discibtion_in_workshop_and_base_text/: down.sql  up.sql
migrations/2024-10-12-130030_add_workshop/: down.sql  up.sql
migrations/2024-10-12-140950_add_non_null/: up.sql
src/: auth.rs  backend.rs  cors.rs  db_backend.rs  error.rs  mails.rs  main.rs  models.rs  open_api.rs  permissions.rs  schema.rs  user.rs  user_data.rs  util.rs
src/auth/: mod.rs  routes.rs  util.rs
src/events/: event_user.rs  mod.rs  public.rs  slots.rs  user_action.rs  users.rs  util.rs
src/firebase/: mod.rs
src/markdown_files/: mod.rs  routes.rs
src/permissions/: mod.rs  routes.rs
(+2 files in other folders)
