[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
bb8 = "0.8"
diesel = { version = "2", features = ["chrono"] }
diesel-async = { version = "0.3", features = ["postgres", "bb8"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.81"
http = "1.1.0"
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
open = "5.3.0"
anyhow = "1.0.86"
axum-login = "0.15.3"
argon2 = "0.5.3"
axum-enum-response = "0.1.2"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
chrono = { version = "0.4.38", features = ["serde"] }